--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@faker-js/faker": "^10.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -35,7 +36,9 @@
     "@angular/build": "^20.3.3",
     "@angular/cli": "^20.3.3",
     "@angular/compiler-cli": "^20.3.0",
+    "@playwright/test": "^1.55.1",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^24.6.1",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
