--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@faker-js/faker": "^10.0.0",
+    "concurrently": "^9.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
